BUGFIX: tables on mobile

--- a/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Content/Text/Text.scss
+++ b/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Content/Text/Text.scss
@@ -26,6 +26,7 @@
 	figure.table {
 		margin-left: 0;
 		margin-right: 0;
+		overflow-x: auto;
 	}
 
 	table {
